Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19391

Crash when importing existing build into open project

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.5.1
    • Qt Creator 4.5.0
    • None
    • Ubuntu 16.04 LTS 64 bit

      Windows 10 1709 64 bit
      MSVC2015 64 bit

      Qt 5.9.3

      1. Have two kits configured in Qt Creator, one using Qt 4.8.7 and one using Qt 5.9.3.
      2. Create a new Qt Console Application project and configure it to use Qt 4.8.7.
      3. Build the project from Creator in a shadow build directory.
      4. Close the project.
      5. Delete the .pro.user file from the project's directory.
      6. Open the project in Creator again and configure it to use Qt 5.9.3.
      7. In Projects mode, click "Import Existing Build" and select the build directory from step 3.
        Creator crashes:
        1  QObjectPrivate::addConnection                                                                                                                                                                                                                     qobject.cpp                    402  0x67723a6a     
        2  QObjectPrivate::connectImpl                                                                                                                                                                                                                       qobject.cpp                    4842 0x677241da     
        3  QObject::connectImpl                                                                                                                                                                                                                              qobject.cpp                    4784 0x677224b2     
        4  QObject::connect<void (__cdecl ProjectExplorer::BuildConfiguration:: *)(void) __ptr64,<lambda_c58e4a8a44d1b0c945213cf921767629>>                                                                                                                  qobject.h                      334  0x7ffa46a3bdfb 
        5  <lambda_80f3ba90a3df9fc7afeb51992dc2f15a>::operator()                                                                                                                                                                                             project.h                      185  0x7ffa46a3d4a8 
        6  std::_Invoker_functor::_Call<<lambda_80f3ba90a3df9fc7afeb51992dc2f15a> & __ptr64,ProjectExplorer::ProjectConfiguration * __ptr64>                                                                                                                 type_traits                    1375 0x7ffa46a3b859 
        7  std::invoke<<lambda_80f3ba90a3df9fc7afeb51992dc2f15a> & __ptr64,ProjectExplorer::ProjectConfiguration * __ptr64>                                                                                                                                  type_traits                    1443 0x7ffa46a3caf9 
        8  std::_Invoke_ret<QMetaObject::Connection,<lambda_80f3ba90a3df9fc7afeb51992dc2f15a> & __ptr64,ProjectExplorer::ProjectConfiguration * __ptr64>                                                                                                     type_traits                    1468 0x7ffa46a3b93d 
        9  std::_Func_impl<<lambda_80f3ba90a3df9fc7afeb51992dc2f15a>,std::allocator<int>,QMetaObject::Connection,ProjectExplorer::ProjectConfiguration * __ptr64>::_Do_call                                                                                  functional                     212  0x7ffa46a3db6e 
        10 std::_Func_class<QMetaObject::Connection,ProjectExplorer::ProjectConfiguration * __ptr64>::operator()                                                                                                                                             functional                     279  0x7ffa4e5dc4fd 
        11 ProjectExplorer::Internal::Subscription::subscribe                                                                                                                                                                                                subscription.cpp               54   0x7ffa4e5db35e 
        12 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>,QtPrivate::List<ProjectExplorer::ProjectConfiguration * __ptr64>,void,void (__cdecl ProjectExplorer::Internal::Subscription:: *)(ProjectExplorer::ProjectConfiguration * __ptr64) __ptr64>::call qobjectdefs_impl.h             136  0x7ffa4e5dca01 
        13 QtPrivate::FunctionPointer<void (__cdecl ProjectExplorer::Internal::Subscription:: *)(ProjectExplorer::ProjectConfiguration * __ptr64) __ptr64>::call<QtPrivate::List<ProjectExplorer::ProjectConfiguration * __ptr64>,void>                      qobjectdefs_impl.h             170  0x7ffa4e5dbd37 
        14 QtPrivate::QSlotObject<void (__cdecl ProjectExplorer::Internal::Subscription:: *)(ProjectExplorer::ProjectConfiguration * __ptr64) __ptr64,QtPrivate::List<ProjectExplorer::ProjectConfiguration * __ptr64>,void>::impl                           qobject_impl.h                 121  0x7ffa4e5dd1ae 
        15 QtPrivate::QSlotObjectBase::call                                                                                                                                                                                                                  qobject_impl.h                 101  0x6772c838     
        16 QMetaObject::activate                                                                                                                                                                                                                             qobject.cpp                    3754 0x6771b4a0     
        17 QMetaObject::activate                                                                                                                                                                                                                             qobject.cpp                    3629 0x6771ad68     
        18 ProjectExplorer::Project::addedProjectConfiguration                                                                                                                                                                                               moc_project.cpp                342  0x7ffa4e8ad04e 
        19 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>,QtPrivate::List<ProjectExplorer::ProjectConfiguration * __ptr64>,void,void (__cdecl ProjectExplorer::Project:: *)(ProjectExplorer::ProjectConfiguration * __ptr64) __ptr64>::call                qobjectdefs_impl.h             136  0x7ffa4e6d0711 
        20 QtPrivate::FunctionPointer<void (__cdecl ProjectExplorer::Project:: *)(ProjectExplorer::ProjectConfiguration * __ptr64) __ptr64>::call<QtPrivate::List<ProjectExplorer::ProjectConfiguration * __ptr64>,void>                                     qobjectdefs_impl.h             170  0x7ffa4e6cd0b7 
        21 QtPrivate::QSlotObject<void (__cdecl ProjectExplorer::Project:: *)(ProjectExplorer::ProjectConfiguration * __ptr64) __ptr64,QtPrivate::List<ProjectExplorer::ProjectConfiguration * __ptr64>,void>::impl                                          qobject_impl.h                 121  0x7ffa4e6d0dce 
        22 QtPrivate::QSlotObjectBase::call                                                                                                                                                                                                                  qobject_impl.h                 101  0x6772c838     
        23 QMetaObject::activate                                                                                                                                                                                                                             qobject.cpp                    3754 0x6771b4a0     
        24 QMetaObject::activate                                                                                                                                                                                                                             qobject.cpp                    3629 0x6771ad68     
        25 ProjectExplorer::Target::addedProjectConfiguration                                                                                                                                                                                                moc_target.cpp                 423  0x7ffa4e8a9ace 
        26 ProjectExplorer::Target::addBuildConfiguration                                                                                                                                                                                                    target.cpp                     213  0x7ffa4e661a25 
        27 ProjectExplorer::Internal::ProjectWindowPrivate::handleImportBuild                                                                                                                                                                                projectwindow.cpp              569  0x7ffa4e5d95e6 
        28 QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (__cdecl ProjectExplorer::Internal::ProjectWindowPrivate:: *)(void) __ptr64>::call                                                                                    qobjectdefs_impl.h             136  0x7ffa4e5d8a7c 
        29 QtPrivate::FunctionPointer<void (__cdecl ProjectExplorer::Internal::ProjectWindowPrivate:: *)(void) __ptr64>::call<QtPrivate::List<>,void>                                                                                                        qobjectdefs_impl.h             170  0x7ffa4e5d3a77 
        30 QtPrivate::QSlotObject<void (__cdecl ProjectExplorer::Internal::ProjectWindowPrivate:: *)(void) __ptr64,QtPrivate::List<>,void>::impl                                                                                                             qobject_impl.h                 121  0x7ffa4e5d9bce 
        31 QtPrivate::QSlotObjectBase::call                                                                                                                                                                                                                  qobject_impl.h                 101  0x6772c838     
        32 QMetaObject::activate                                                                                                                                                                                                                             qobject.cpp                    3754 0x6771b4a0     
        33 QMetaObject::activate                                                                                                                                                                                                                             qobject.cpp                    3629 0x6771ad68     
        34 QAbstractButton::clicked                                                                                                                                                                                                                          moc_qabstractbutton.cpp        309  0x665f014d     
        35 QAbstractButtonPrivate::emitClicked                                                                                                                                                                                                               qabstractbutton.cpp            416  0x665f2284     
        36 QAbstractButtonPrivate::click                                                                                                                                                                                                                     qabstractbutton.cpp            408  0x665f1347     
        37 QAbstractButton::mouseReleaseEvent                                                                                                                                                                                                                qabstractbutton.cpp            1011 0x665f0907     
        38 QWidget::event                                                                                                                                                                                                                                    qwidget.cpp                    8821 0x6644505d     
        39 QAbstractButton::event                                                                                                                                                                                                                            qabstractbutton.cpp            969  0x665f039b     
        40 QPushButton::event                                                                                                                                                                                                                                qpushbutton.cpp                686  0x66713271     
        41 QApplicationPrivate::notify_helper                                                                                                                                                                                                                qapplication.cpp               3722 0x663e77ae     
        42 QApplication::notify                                                                                                                                                                                                                              qapplication.cpp               3198 0x663e29ec     
        43 QCoreApplication::notifyInternal2                                                                                                                                                                                                                 qcoreapplication.cpp           1018 0x676c4f36     
        44 QCoreApplication::sendSpontaneousEvent                                                                                                                                                                                                            qcoreapplication.h             236  0x6782be0b     
        45 QApplicationPrivate::sendMouseEvent                                                                                                                                                                                                               qapplication.cpp               2702 0x663e9ea3     
        46 QWidgetWindow::handleMouseEvent                                                                                                                                                                                                                   qwidgetwindow.cpp              623  0x66490577     
        47 QWidgetWindow::event                                                                                                                                                                                                                              qwidgetwindow.cpp              244  0x6648ed4a     
        48 QApplicationPrivate::notify_helper                                                                                                                                                                                                                qapplication.cpp               3722 0x663e77ae     
        49 QApplication::notify                                                                                                                                                                                                                              qapplication.cpp               3094 0x663e21e3     
        50 QCoreApplication::notifyInternal2                                                                                                                                                                                                                 qcoreapplication.cpp           1018 0x676c4f36     
        51 QCoreApplication::sendSpontaneousEvent                                                                                                                                                                                                            qcoreapplication.h             236  0x6782be0b     
        52 QGuiApplicationPrivate::processMouseEvent                                                                                                                                                                                                         qguiapplication.cpp            1950 0x7ffa4f9ad15a 
        53 QGuiApplicationPrivate::processWindowSystemEvent                                                                                                                                                                                                  qguiapplication.cpp            1734 0x7ffa4f9afcd3 
        54 QWindowSystemInterface::sendWindowSystemEvents                                                                                                                                                                                                    qwindowsysteminterface.cpp     945  0x7ffa4f969b35 
        55 QWindowsGuiEventDispatcher::sendPostedEvents                                                                                                                                                                                                      qwindowsguieventdispatcher.cpp 83   0x7ffa4f61a582 
        56 qt_internal_proc                                                                                                                                                                                                                                  qeventdispatcher_win.cpp       237  0x67780d17     
        57 CallWindowProcW                                                                                                                                                                                                                                   USER32                              0x7ffa9585b85d 
        58 DispatchMessageW                                                                                                                                                                                                                                  USER32                              0x7ffa9585b1ef 
        59 QEventDispatcherWin32::processEvents                                                                                                                                                                                                              qeventdispatcher_win.cpp       628  0x6778172b     
        60 QWindowsGuiEventDispatcher::processEvents                                                                                                                                                                                                         qwindowsguieventdispatcher.cpp 74   0x7ffa4f61a534 
        61 QEventLoop::processEvents                                                                                                                                                                                                                         qeventloop.cpp                 135  0x676bf2d8     
        62 QEventLoop::exec                                                                                                                                                                                                                                  qeventloop.cpp                 212  0x676bf51e     
        63 QCoreApplication::exec                                                                                                                                                                                                                            qcoreapplication.cpp           1291 0x676c2bdf     
        64 QGuiApplication::exec                                                                                                                                                                                                                             qguiapplication.cpp            1680 0x7ffa4f9aa6b8 
        65 QApplication::exec                                                                                                                                                                                                                                qapplication.cpp               2911 0x663e1cea     
        66 main                                                                                                                                                                                                                                              main.cpp                       537  0x7ff7ef24a8bb 
        67 WinMain                                                                                                                                                                                                                                           qtmain_win.cpp                 104  0x7ff7ef25311d 
        68 invoke_main                                                                                                                                                                                                                                       exe_common.inl                 99   0x7ff7ef25143d 
        69 __scrt_common_main_seh                                                                                                                                                                                                                            exe_common.inl                 253  0x7ff7ef251357 
        70 __scrt_common_main                                                                                                                                                                                                                                exe_common.inl                 296  0x7ff7ef25121e 
        71 WinMainCRTStartup                                                                                                                                                                                                                                 exe_winmain.cpp                17   0x7ff7ef251459 
        72 BaseThreadInitThunk                                                                                                                                                                                                                               KERNEL32                            0x7ffa97b71fe4 
        73 RtlUserThreadStart                                                                                                                                                                                                                                ntdll                               0x7ffa97d5ef91 
        

      Will be tested by Squish test tst_import_build.

        1. backtrace.txt
          67 kB
          Robert Löhning
        2. backtrace_linux.txt
          52 kB
          Robert Löhning
        For Gerrit Dashboard: QTCREATORBUG-19391
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change