ProjectExplorer: Make subscriptions more robust

Make sure not to continue to connect after the receiver was destructed
and make sure to disconnect from everything when that happens.

Task-number: QTCREATORBUG-19391
Change-Id: I4d09a7dca2a5260c3d4744607dccbde5964a0623
Reviewed-by: Eike Ziller <eike.ziller@qt.io>